--- a/config.yml
+++ b/config.yml
@@ -4,4 +4,4 @@ theme: dimension
 resume: false
 biography: A description of yourself # This field is for writing about yourself you can add a > to span multiple lines
 background: https://i.pinimg.com/originals/17/b8/66/17b8669917485ee73510c5cfa5d8b0e6.jpg
-avatar: https://i.pinimg.com/originals/36/f0/01/36f001b697a8bab2051bd03cf1a60973.jpg
+avatar: dp.jfif
