--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,9 @@
 # See https://ezcv.readthedocs.io for documentation
-name: utkarsh
+name: Utkarsh Raj
 theme: dimension
 resume: false
 biography: A description of yourself # This field is for writing about yourself you can add a > to span multiple lines
 background: https://i.pinimg.com/originals/17/b8/66/17b8669917485ee73510c5cfa5d8b0e6.jpg
 avatar: dp.jfif
+email: utkarsh.sendmail@gmail.com
+phone: 8877633383
