--- a/config.yml
+++ b/config.yml
@@ -7,3 +7,5 @@ background: https://i.pinimg.com/originals/17/b8/66/17b8669917485ee73510c5cfa5d8
 avatar: dp.jfif
 email: utkarsh.sendmail@gmail.com
 phone: 8877633383
+blog: true
+blog_link: https://thinkstraight.substack.com/
