--- a/config.yml
+++ b/config.yml
@@ -9,3 +9,4 @@ email: utkarsh.sendmail@gmail.com
 phone: 8877633383
 blog: true
 blog_link: https://thinkstraight.substack.com/
+twitter_embed_url: <a class="twitter-timeline" href="https://twitter.com/utk_tweeting?ref_src=twsrc%5Etfw">Tweets by utk_tweeting</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
