--- a/config.yml
+++ b/config.yml
@@ -2,8 +2,8 @@
 name: Utkarsh Raj
 theme: dimension
 resume: false
-biography: A description of yourself # This field is for writing about yourself you can add a > to span multiple lines
-background: https://i.pinimg.com/originals/17/b8/66/17b8669917485ee73510c5cfa5d8b0e6.jpg
+biography: Hey! this is Utkarsh. This is an attempt to write a non-generic non-pretentious introduction about myself. I don't have any idea how to start. So, its better to just go to my LinkedIn where you will find all the pretentious stuff. 
+background: max-kuntscher-Cpb2HY41bs8-unsplash.jpg
 avatar: dp.jfif
 email: utkarsh.sendmail@gmail.com
 phone: 8877633383
