--- a/config.yml
+++ b/config.yml
@@ -11,3 +11,10 @@ blog: true
 blog_link: https://thinkstraight.substack.com/
 social: true
 twitter_embed_url: https://twitter.com/utk_tweeting?ref_src=twsrc%5Etfw
+projects: 
+  {0:
+    {'title':'',
+      'link': ''},
+   1:{'title':'',
+      'link': ''}   
+  }
